--- a/index.html
+++ b/index.html
@@ -1,158 +1,265 @@
 <!DOCTYPE html>
-<html lang="kk">
+<html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Ауа райы (адаптив, жасыл-ақ)</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Weather App</title>
   <style>
-    :root {
-      --bg1:#e9fff0; --bg2:#ddfff6; --accent:#00c853; --accent-2:#007a3d; --card:rgba(255,255,255,0.7);
-      --text:#063b2a;
+    * {
+      box-sizing: border-box;
+      font-family: "Poppins", sans-serif;
+      transition: all 0.3s ease;
     }
-    *{box-sizing:border-box}
-    body{
-      margin:0;font-family:Inter,system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial;
-      min-height:100vh;display:flex;align-items:center;justify-content:center;
-      background:linear-gradient(135deg,var(--bg1),var(--bg2));color:var(--text);
-      padding:20px;
+
+    body {
+      background-color: #f5fff5;
+      margin: 0;
+      padding: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
     }
-    .wrap{
-      width:100%;max-width:520px;padding:28px;border-radius:16px;background:var(--card);
-      backdrop-filter:blur(6px);box-shadow:0 10px 30px rgba(4,54,36,0.15);
-      transition:all .3s ease;
+
+    .weather-card {
+      background: #ffffff;
+      border-radius: 20px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+      width: 100%;
+      max-width: 900px;
+      padding: 30px;
+      display: flex;
+      flex-direction: column;
+      gap: 25px;
     }
-    header{display:flex;align-items:center;gap:12px;margin-bottom:14px;flex-wrap:wrap;}
-    h1{font-size:22px;margin:0;color:var(--accent-2);flex:1;}
-    .controls{display:flex;gap:8px;margin-top:10px;flex-wrap:wrap;}
-    input[type="text"]{
-      flex:1;min-width:160px;padding:10px 12px;border-radius:10px;
-      border:2px solid rgba(0,0,0,0.08);font-size:15px;outline:none;
-      width:100%;
+
+    .top {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+      gap: 15px;
     }
-    button{
-      background:var(--accent);color:white;border:none;padding:10px 14px;border-radius:10px;font-weight:600;
-      cursor:pointer;transition:background .25s;
+
+    .city-input {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      align-items: center;
     }
-    button:hover{background:#00b64a}
-    button.alt{background:transparent;border:2px solid var(--accent);color:var(--accent-2)}
-    button.alt:hover{background:var(--accent-2);color:white}
-    .note{font-size:13px;color:rgba(6,59,42,0.8);margin-top:8px}
-    .result{
-      margin-top:18px;padding:16px;border-radius:12px;
-      background:linear-gradient(180deg,rgba(255,255,255,0.92),rgba(255,255,255,0.85));
-      word-break:break-word;
+
+    .city-input input {
+      padding: 10px 15px;
+      border: 2px solid #a7e0a2;
+      border-radius: 10px;
+      outline: none;
+      width: 220px;
+      font-size: 16px;
     }
-    .row{display:flex;align-items:center;gap:12px;flex-wrap:wrap;}
-    .city{font-size:18px;font-weight:700}
-    .temp{font-size:36px;font-weight:800;color:var(--accent-2)}
-    .desc{text-transform:capitalize;font-size:15px;margin-top:6px}
-    .meta{font-size:13px;color:rgba(6,59,42,0.7);margin-top:8px}
-    .error{color:#8b0000;font-weight:700}
-    .spinner{
-      width:18px;height:18px;border-radius:50%;
-      border:3px solid rgba(0,0,0,0.08);border-top-color:var(--accent);
-      animation:spin 1s linear infinite;display:inline-block;vertical-align:middle;
+
+    .btn {
+      background: #65d86e;
+      border: none;
+      color: white;
+      padding: 10px 15px;
+      border-radius: 10px;
+      cursor: pointer;
+      font-weight: 500;
     }
-    footer{margin-top:14px;font-size:13px;color:rgba(6,59,42,0.6);text-align:center}
-    img.icon{width:84px;height:84px}
-    @keyframes spin{to{transform:rotate(360deg)}}
-    @media (max-width:768px){
-      .wrap{max-width:90%;padding:20px}
-      h1{font-size:20px;text-align:center;width:100%}
-      .controls{flex-direction:column;align-items:stretch}
-      input,button{width:100%}
-      .row{justify-content:center;text-align:center}
+
+    .btn:hover {
+      background: #4ec857;
     }
-    @media (max-width:480px){
-      body{padding:10px}
-      .temp{font-size:30px}
-      img.icon{width:64px;height:64px}
-      .wrap{padding:16px}
+
+    .main {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+      gap: 20px;
+    }
+
+    .left {
+      flex: 1;
+      min-width: 250px;
+    }
+
+    .left h2 {
+      color: #333;
+      margin-bottom: 8px;
+    }
+
+    .left h1 {
+      font-size: 3rem;
+      margin: 10px 0;
+      color: #2b2b2b;
+    }
+
+    .left p {
+      color: #555;
+      margin: 5px 0;
+      font-size: 15px;
+    }
+
+    .right {
+      flex: 1;
+      min-width: 250px;
+      text-align: center;
+    }
+
+    .right img {
+      width: 120px;
+      max-width: 100%;
+    }
+
+    .forecast {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      margin-top: 20px;
+      gap: 10px;
+    }
+
+    .day {
+      flex: 1;
+      min-width: 140px;
+      text-align: center;
+      background: #f0fff0;
+      border-radius: 12px;
+      padding: 10px;
+      margin: 5px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    .day:hover {
+      background: #aef7b2;
+      color: #000;
+    }
+
+    .active-day {
+      background: #65d86e;
+      color: white;
+    }
+
+    @media (max-width: 900px) {
+      .weather-card {
+        padding: 20px;
+      }
+      .main {
+        flex-direction: column;
+        text-align: center;
+      }
+      .left h1 {
+        font-size: 2.5rem;
+      }
+    }
+
+    @media (max-width: 600px) {
+      .city-input input {
+        width: 100%;
+      }
+      .forecast {
+        flex-direction: column;
+        align-items: center;
+      }
+      .day {
+        width: 80%;
+      }
+    }
+
+    @media (max-width: 400px) {
+      .left h1 {
+        font-size: 2rem;
+      }
+      .btn {
+        width: 100%;
+      }
     }
   </style>
 </head>
 <body>
-  <div class="wrap">
-    <header>
-      <svg width="36" height="36" viewBox="0 0 24 24" fill="none">
-        <path d="M6 14.5a4.5 4.5 0 1 0 9 0 4.5 4.5 0 0 0-9 0z" fill="#00c853"/>
-        <path d="M13 4.5V3" stroke="#004d26" stroke-linecap="round" stroke-linejoin="round"/>
-        <path d="M8 6L7 4" stroke="#004d26" stroke-linecap="round" stroke-linejoin="round"/>
-      </svg>
-      <h1>Ауа райы (адаптив)</h1>
-    </header>
-
-    <div class="controls">
-      <input id="cityInput" type="text" placeholder="Мысалы: Almaty, Shymkent...">
-      <button id="searchBtn">Іздеу</button>
+  <div class="weather-card">
+    <div class="top">
+      <div class="city-input">
+        <input type="text" id="city" placeholder="Enter city..." />
+        <button class="btn" onclick="getWeather()">Search</button>
+      </div>
+      <div id="date"></div>
     </div>
 
-    <div id="output" class="result">
-      <div class="meta">Қаланы жазып, <b>Іздеу</b>-ді бас.</div>
+    <div class="main">
+      <div class="left">
+        <h2 id="cityName">Your City</h2>
+        <h1 id="temp">--°C</h1>
+        <p id="desc">---</p>
+        <p>💧 Humidity: <span id="humidity">--%</span></p>
+        <p>🌬️ Wind: <span id="wind">-- km/h</span></p>
+      </div>
+
+      <div class="right">
+        <img id="icon" src="" alt="weather icon" />
+      </div>
     </div>
 
-    <footer>OpenWeather арқылы • Адаптив дизайн 🌿</footer>
+    <div class="forecast" id="forecast"></div>
   </div>
 
   <script>
-    const API_KEY = "a7c04541a8793ebeb4a7bfa536fd11b5";
-    const cityInput = document.getElementById('cityInput');
-    const searchBtn = document.getElementById('searchBtn');
-    const locBtn = document.getElementById('locBtn');
-    const output = document.getElementById('output');
+    const apiKey = "a7c04541a8793ebeb4a7bfa536fd11b5"; 
 
-    const show = html => output.innerHTML = html;
-    const loading = t => show(`<div class="meta"><span class="spinner"></span> ${t}</div>`);
-    const error = m => show(`<div class="error">${m}</div>`);
+    document.getElementById("date").textContent = new Date().toLocaleString();
 
-    async function getWeather(url){
-      try{
-        const res = await fetch(url);
-        if(!res.ok){
-          if(res.status===401) return error("API кілт жарамсыз (401).");
-          if(res.status===404) return error("Қала табылмады.");
-          return error("Қате: "+res.status);
+    async function getWeather() {
+      const city = document.getElementById("city").value.trim() || "London";
+      const url = `https://api.openweathermap.org/data/2.5/forecast?q=${city}&units=metric&appid=${apiKey}`;
+      const res = await fetch(url);
+      const data = await res.json();
+
+      if (data.cod !== "200") {
+        alert("City not found!");
+        return;
+      }
+
+      const current = data.list[0];
+      document.getElementById("cityName").textContent = data.city.name;
+      document.getElementById("temp").textContent = Math.round(current.main.temp) + "°C";
+      document.getElementById("desc").textContent = current.weather[0].description;
+      document.getElementById("humidity").textContent = current.main.humidity + "%";
+      document.getElementById("wind").textContent = (current.wind.speed * 3.6).toFixed(1) + " km/h";
+      document.getElementById("icon").src = `https://openweathermap.org/img/wn/${current.weather[0].icon}@2x.png`;
+
+      const forecastEl = document.getElementById("forecast");
+      forecastEl.innerHTML = "";
+      const days = {};
+
+      data.list.forEach((item) => {
+        const date = item.dt_txt.split(" ")[0];
+        if (!days[date]) {
+          days[date] = item;
         }
-        const d = await res.json();
-        const name = d.name, t = Math.round(d.main.temp);
-        const desc = d.weather[0].description;
-        const icon = d.weather[0].icon;
-        const h = d.main.humidity, w = d.wind.speed;
-        show(`
-          <div class="row">
-            <div>
-              <div class="city">${name}</div>
-              <div class="temp">${t}°C</div>
-              <div class="desc">${desc}</div>
-              <div class="meta">Ылғал: ${h}% · Жел: ${w} м/с</div>
-            </div>
-            <div style="margin-left:auto;text-align:center">
-              <img class="icon" src="https://openweathermap.org/img/wn/${icon}@2x.png" alt="${desc}">
-            </div>
-          </div>
-        `);
-      }catch(e){error("Интернет не API қатесі");}
+      });
+
+      Object.keys(days).slice(0, 4).forEach((day, i) => {
+        const d = new Date(day);
+        const name = d.toLocaleDateString("en-US", { weekday: "short", month: "short", day: "numeric" });
+        const temp = Math.round(days[day].main.temp);
+        const hum = days[day].main.humidity;
+        const icon = days[day].weather[0].icon;
+
+        const div = document.createElement("div");
+        div.className = "day" + (i === 0 ? " active-day" : "");
+        div.innerHTML = `
+          <h4>${name}</h4>
+          <img src="https://openweathermap.org/img/wn/${icon}.png" width="50">
+          <p>${temp}°C</p>
+          <small>Humidity ${hum}%</small>
+        `;
+        forecastEl.appendChild(div);
+      });
     }
 
-    searchBtn.onclick = ()=>{
-      const c = cityInput.value.trim();
-      if(!c) return error("Қаланы енгіз.");
-      if(!API_KEY || API_KEY==="YOUR_API_KEY_HERE") return error("API key орнат.");
-      loading("Жүктеліп жатыр...");
-      const url = `https://api.openweathermap.org/data/2.5/weather?q=${encodeURIComponent(c)}&appid=${API_KEY}&units=metric&lang=kk`;
-      getWeather(url);
-    }
-
-    cityInput.addEventListener("keydown", e=>{if(e.key==="Enter") searchBtn.click()});
-    locBtn.onclick = ()=>{
-      if(!navigator.geolocation) return error("Геолокация қол жетімсіз.");
-      loading("Орның анықталуда...");
-      navigator.geolocation.getCurrentPosition(p=>{
-        const {latitude,longitude}=p.coords;
-        const url = `https://api.openweathermap.org/data/2.5/weather?lat=${latitude}&lon=${longitude}&appid=${API_KEY}&units=metric&lang=kk`;
-        getWeather(url);
-      },()=>error("Орның табылмады."));
-    }
+    getWeather();
   </script>
 </body>
 </html>
